# DCP-sodden

./: CMakeLists.txt
olden/bh/: CMakeLists.txt
olden/bh/original/: src
olden/bisort/: CMakeLists.txt
olden/bisort/abstract/: CMakeLists.txt  src
olden/bisort/original/: CMakeLists.txt  src
olden/em3d/: CMakeLists.txt
olden/em3d/original/: src
olden/health/: CMakeLists.txt
olden/health/abstract/: CMakeLists.txt
olden/health/abstract_old/: CMakeLists.txt  src
olden/health/original/: src
olden/mst/: CMakeLists.txt
olden/mst/original/: src
olden/perimeter/: CMakeLists.txt
olden/perimeter/abstract/: CMakeLists.txt  src
olden/perimeter/abstract_old/: CMakeLists.txt  src
olden/perimeter/original/: CMakeLists.txt  src
olden/power/: CMakeLists.txt
olden/power/abstract/: CMakeLists.txt  src
olden/power/original/: CMakeLists.txt  src
olden/treeadd/: CMakeLists.txt
olden/treeadd/abstract/: CMakeLists.txt  src
olden/treeadd/abstract_old/: CMakeLists.txt
olden/treeadd/original/: CMakeLists.txt  src
olden/tsp/: CMakeLists.txt
olden/tsp/original/: src
olden/voronoi/: CMakeLists.txt
olden/voronoi/original/: src
utils/scripts/source_tree/: create-symlink-bmk-subdir.sh  create-symlink-lib-dir.sh
